--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,6 @@ jobs:
         run: |
           echo "ECR Registry: ${{ steps.login-ecr.outputs.registry }}"
           echo "GitHub SHA: ${{ github.sha }}"
-          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+          echo "GitHub SHA: $REGISTRY/$REPOSITORY:$IMAGE_TAG"
+          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG -f "./Dockerfile" .
           docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
