--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code into the Go module directory
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
